<resources>
    <string name="app_name">9点片场</string>
    <string name="暂停">&#xe62a;</string>;
    <string name="查找">&#xe661;</string>;
    <string name="首页">&#xe701;</string>;
    <string name="播放">&#xe646;</string>;
    <string name="播放2">&#xe631;</string>;
    <string name="下载">&#xe723;</string>;
    <string name="分类">&#xe610;</string>;
    <string name="收藏1">&#xe64f;</string>;
    <string name="返回">&#xe62f;</string>;
    <string name="菜单2">&#xe688;</string>;
    <string name="分享">&#xe62e;</string>;

    <string name="选择1">&#xe605;</string>;
    <string name="选择2">&#xe64d;</string>;
    <string name="收藏2">&#xe600;</string>;
    <string name="最新">&#xe618;</string>;

    <string name="广告">&#xe665;</string>;
    <string name="剧情">&#xe602;</string>;
    <string name="网络">&#xe614;</string>;
    <string name="创意">&#xe637;</string>;
    <string name="纪录片">&#xe642;</string>;
    <string name="MV">&#xe833;</string>;
    <string name="混剪">&#xe60c;</string>;
    <string name="特殊">&#xe633;</string>;
    <string name="栏目">&#xe696;</string>;
    <string name="预告">&#xe609;</string>;
    <string name="VR">&#xe601;</string>;
    <string name="动画">&#xe718;</string>;

    <string name="亮度">&#xe6f7;</string>;
    <string name="音量">&#xe60a;</string>;


</resources>
