<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <RelativeLayout
            android:id="@+id/A1"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/DarkFontColor">
            <RelativeLayout
                android:layout_margin="2dp"
                android:layout_above="@+id/ad_t"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/FontColor">
                <ui.IconFontTextView
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/DarkFontColor"
                    android:textSize="40dp"
                    android:text="@string/剧情"/>
            </RelativeLayout>

            <ui.ChTextView
                android:id="@+id/ad_t"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColor="@color/FontColor"
                android:text="剧情短片"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/A2"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/DarkFontColor">
            <RelativeLayout
                android:layout_margin="2dp"
                android:layout_above="@+id/ad_t"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/FontColor">
                <ui.IconFontTextView
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/DarkFontColor"
                    android:textSize="48dp"
                    android:text="@string/网络"/>
            </RelativeLayout>

            <ui.ChTextView
                android:id="@+id/ad_t"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColor="@color/FontColor"
                android:text="网络电影"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/A3"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/DarkFontColor">
            <RelativeLayout
                android:layout_margin="2dp"
                android:layout_above="@+id/ad_t"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/FontColor">
                <ui.IconFontTextView
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/DarkFontColor"
                    android:textSize="40dp"
                    android:text="@string/广告"/>
            </RelativeLayout>

            <ui.ChTextView
                android:id="@+id/ad_t"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColor="@color/FontColor"
                android:text="广告/宣传片"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <RelativeLayout
            android:id="@+id/B1"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/DarkFontColor">
            <RelativeLayout
                android:layout_margin="2dp"
                android:layout_above="@+id/ad_t"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/FontColor">
                <ui.IconFontTextView
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/DarkFontColor"
                    android:textSize="40dp"
                    android:text="@string/创意"/>
            </RelativeLayout>

            <ui.ChTextView
                android:id="@+id/ad_t"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColor="@color/FontColor"
                android:text="创意实验"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/B2"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/DarkFontColor">
            <RelativeLayout
                android:layout_margin="2dp"
                android:layout_above="@+id/ad_t"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/FontColor">
                <ui.IconFontTextView
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/DarkFontColor"
                    android:textSize="48dp"
                    android:text="@string/纪录片"/>
            </RelativeLayout>

            <ui.ChTextView
                android:id="@+id/ad_t"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColor="@color/FontColor"
                android:text="纪录片"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/B3"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/DarkFontColor">
            <RelativeLayout
                android:layout_margin="2dp"
                android:layout_above="@+id/ad_t"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/FontColor">
                <ui.IconFontTextView
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/DarkFontColor"
                    android:textSize="40dp"
                    android:text="@string/MV"/>
            </RelativeLayout>

            <ui.ChTextView
                android:id="@+id/ad_t"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColor="@color/FontColor"
                android:text="MV"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <RelativeLayout
            android:id="@+id/C1"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/DarkFontColor">
            <RelativeLayout
                android:layout_margin="2dp"
                android:layout_above="@+id/ad_t"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/FontColor">
                <ui.IconFontTextView
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/DarkFontColor"
                    android:textSize="40dp"
                    android:text="@string/混剪"/>
            </RelativeLayout>

            <ui.ChTextView
                android:id="@+id/ad_t"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColor="@color/FontColor"
                android:text="混剪配音"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/C2"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/DarkFontColor">
            <RelativeLayout
                android:layout_margin="2dp"
                android:layout_above="@+id/ad_t"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/FontColor">
                <ui.IconFontTextView
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/DarkFontColor"
                    android:textSize="48dp"
                    android:text="@string/特殊"/>
            </RelativeLayout>

            <ui.ChTextView
                android:id="@+id/ad_t"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColor="@color/FontColor"
                android:text="特殊摄影"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/C3"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/DarkFontColor">
            <RelativeLayout
                android:layout_margin="2dp"
                android:layout_above="@+id/ad_t"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/FontColor">
                <ui.IconFontTextView
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/DarkFontColor"
                    android:textSize="40dp"
                    android:text="@string/栏目"/>
            </RelativeLayout>

            <ui.ChTextView
                android:id="@+id/ad_t"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColor="@color/FontColor"
                android:text="栏目/网剧"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <RelativeLayout
            android:id="@+id/D1"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/DarkFontColor">
            <RelativeLayout
                android:layout_margin="2dp"
                android:layout_above="@+id/ad_t"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/FontColor">
                <ui.IconFontTextView
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/DarkFontColor"
                    android:textSize="40dp"
                    android:text="@string/动画"/>
            </RelativeLayout>

            <ui.ChTextView
                android:id="@+id/ad_t"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColor="@color/FontColor"
                android:text="动画"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/D2"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/DarkFontColor">
            <RelativeLayout
                android:layout_margin="2dp"
                android:layout_above="@+id/ad_t"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/FontColor">
                <ui.IconFontTextView
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/DarkFontColor"
                    android:textSize="48dp"
                    android:text="@string/预告"/>
            </RelativeLayout>

            <ui.ChTextView
                android:id="@+id/ad_t"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColor="@color/FontColor"
                android:text="预告片/花絮"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/D3"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/DarkFontColor">
            <RelativeLayout
                android:layout_margin="2dp"
                android:layout_above="@+id/ad_t"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/FontColor">
                <ui.IconFontTextView
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/DarkFontColor"
                    android:textSize="40dp"
                    android:text="@string/VR"/>
            </RelativeLayout>

            <ui.ChTextView
                android:id="@+id/ad_t"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColor="@color/FontColor"
                android:text="OTHERS"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>